--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
 <body>
     <h1>Isabel's Soundboard!</h1>
     <div class="soundtown">
-        <button onclick="champagne()" onmousenter="champagneenter()"> Champagne Pop </button>
+        <button type="button" id="champagne" > Champagne Pop 
+            <audio id="champagnesound" src="champagne.wav"></audio>
+        </button>
 
-        <button onclick="cough()" onmousenter="coughenter()"> Cough </button>
+        <button type="button" id="cough" > Cough 
+            <audio id="coughsound" src="cough_x.wav"></audio>
+        </button>
 
-        <button onclick="wind()" onmousenter="windenter()"> Wind </button>
+        <button type="button" id="wind" > Wind 
+            <audio id="windsound" src="wind.wav"></audio>
+        </button>
     </div>
 
-<audio id="champagnesound" src="champagne.wav"></audio>
-<audio id="coughsound" src="cough_x.wav"></audio>
-<audio id="windsound" src="wind.wav"></audio>
+
 <audio id="blipsound" src="blip.wav"></audio>
-    <script src="soundboard.js"></script>
+
+<script src="soundboard.js"></script>
 </body>
 </html>
